# Search-Engine

./: .gitignore  Cargo.toml  README.md
.brutal-index/: brave-results.jsonl  crawl-docs.jsonl  manifest.json  web-cache.jsonl
bench/browser-fixtures/: attribute-css-selectors.html  background-paint.html  block-size-layout.html  border-paint.html  class-list-mutation.html  click-event.html  complex-selector-query-click.html  compound-css-selectors.html  document-fragment.html  dom-insertion-methods.html  dom-node-traversal.html  dom-tree-mutation.html  external-script-page.html  external-script.js  form-control-layout.html  form-control-properties.html  get-attribute.html  image-placeholder.html  inline-js-create-append.html  inline-js-dom-text.html  inner-html-mutation.html  lifecycle-events.html  list-marker-types.html  listener-event.html  local-storage.html  location-readback.html  manifest.json  margin-layout.html  (+22 more)
docs/: ARCHITECTURE.md  BROWSER_ENGINE_STRATEGY.md  BROWSER_RENDERING_COMPOSITOR_PLAN.md  COMPETITOR_ROADMAP.md  EVIDENCE_REGISTRY.md  OPERATIONS_RELIABILITY_PLAN.md  PERFORMANT_RUST_BROWSER_PLAN.md  PLATFORM_COMPLETENESS_PLAN.md  PROGRAM_PLAN.md  REQUIREMENTS_TRACEABILITY.md  SECURITY_PRIVACY_PLAN.md
src/: bench.rs  browser.rs  browser_compat.rs  crawler.rs  daemon.rs  document.rs  extract.rs  frontier.rs  index.rs  lib.rs  protocol.rs  query.rs  recrawl.rs  render.rs  robots.rs  scheduler.rs  search_provider.rs  server.rs  sitemap.rs  tokenizer.rs  urlcanon.rs  varint.rs  web_search.rs
tests/: brutal_browser_cli.rs  source_file_size_budgets.rs
(+33 files in other folders)
