[package]
name = "brutal-search"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A Rust-native browser engine with fast search and extraction modes."

[features]
default = []
native-window = ["dep:minifb"]

[lib]
name = "brutal_search"
path = "src/lib.rs"

[[bin]]
name = "brutal-search"
path = "src/bin/brutal-search.rs"

[[bin]]
name = "brutal-searchd"
path = "src/bin/brutal-searchd.rs"

[[bin]]
name = "brutal-bench"
path = "src/bin/brutal-bench.rs"

[[bin]]
name = "brutal-browser"
path = "src/bin/brutal-browser.rs"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
blake3 = "1.5"
chrono = { version = "0.4", default-features = false, features = ["std"] }
clap = { version = "4.5", features = ["derive", "env"] }
futures = "0.3"
flate2 = "1.0"
html-escape = "0.2"
image = { version = "0.25", default-features = false, features = ["bmp", "webp"] }
jpeg-decoder = { version = "0.3", default-features = false }
memchr = "2.7"
memmap2 = "0.9"
minifb = { version = "0.28", optional = true }
quick-xml = "0.36"
reqwest = { version = "0.12", default-features = false, features = ["brotli", "charset", "deflate", "gzip", "http2", "rustls-tls", "zstd"] }
rustc-hash = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["full"] }
url = { version = "2.5", features = ["serde"] }
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.14"
